started testing for randomGenerator, moved helpers to new file, etc
